# snusmic-portfolio-lab

./: .dockerignore  .gitattributes  .gitignore  .omc_baseline_targets.json  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  README.en.md  README.md  _check.py  _check2.py  _trace.py  analyze2.py  analyze2_out.txt  analyze_issues.py  analyze_out.txt  biome.json  check_d0_detail.py  check_foreign.py  check_rows.py  check_tickers.py  debug_out.txt  debug_parse.py  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  temp_cj.txt  tk_check.txt  trace_out.txt  vercel.json
.github/: branch-protection.yml
.github/workflows/: budget-check.yml  ci.yml  price-refresh.yml  refresh-daily.yml  refresh-data.yml  refresh-prices.yml  refresh-reports.yml  sync.yml  tests.yml  web.yml
.gjc/specs/: deep-interview-index.jsonl  deep-interview-snusmic-action-queue-workstation.md
.gjc/state/: audit.jsonl  deep-interview-state.json  ralplan-state.json
.gjc/ultragoal/: brief.md  goals.json  ledger.jsonl
.omx/quant-insights/: final-stock-level-validation.md  worker-2-root-cause.md  worker-2-search-run.md
apps/web/: .gitignore  biome.json  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
data/: extracted_reports.csv  extraction_quality.json  health.json  manifest.json  report_parse_issues.csv  report_parsed.csv  report_performance.csv  report_performance_summary.csv
data/markdown/: 2020-06-22_equity-research-교촌에프앤비.md  2020-06-22_equity-research-네패스-2.md  2020-06-22_equity-research-자이에스앤디.md  2020-06-22_equity-research-제이브이엠-2.md  2020-06-22_equity-research-테스나.md  2020-10-10_equity-research-디이엔티.md  2020-10-10_equity-research-엑시콘.md  2020-10-10_equity-research-이엔드디.md  2020-10-10_equity-research-코스맥스.md  2020-10-10_equity-research-핌스.md  2020-10-31_equity-research-에스제이그룹.md  2020-10-31_equity-research-이지바이오.md  2020-10-31_equity-research-이지웰.md  2020-10-31_equity-research-지트리비앤티.md  2020-10-31_equity-research-진성티이씨.md  2021-04-15_10537-2.md  (+229 more)
docs/: API.md  CHANGELOG.md  DOCKER.md  OPS.md  README.en.md  README.md  agent-playbook.md  backtest-contract.en.md  backtest-contract.md  data-artifact-policy.en.md  data-artifact-policy.md  data-surface-architecture.md  frontend-product-direction.md  handoff-codex.md  incremental-forward-contract.md  navigation-architecture.md  page-data-flow.md  portfolio-restructure-plan.md  product-spec.en.md  product-spec.md  release-criteria.en.md  release-criteria.md  showcase-verification.md  simplification-candidates.md  technical-architecture.en.md  technical-architecture.md  testing-performance-strategy.md  ui-ux-principles.md  v4-design-council.md  v4-minimal-insight-redesign.md
public/: strategy-trades-A_12mo.csv  strategy-trades-B_36mo.csv  strategy-trades-C_narrative.csv  strategy-trades-D+_chandelier_optuna.csv  strategy-trades-D_chandelier.csv  strategy-trades-E_half_runner.csv  strategy-trades-F_momentum_narrative.csv  strategy-trades-G_dip_buy.csv  strategy-trades-H_minervini.csv  strategy-trades-I_supertrend.csv  strategy-trades-J_core_satellite.csv  strategy-trades-K_rr_trend.csv  strategy-trades-L_rsi2_reversion.csv  strategy-trades-M_short_reversal.csv  strategy-trades-N_52w_high.csv  strategy-trades-O_mtt_alpha16.csv  strategy-trades-P_deepbuy_chandelier.csv  strategy-trades-Q_kangto_trend.csv  strategy-trades-R_kelly_chandelier.csv  strategy-trades-S_hrp.csv  strategy-trades-S_mincvar.csv  strategy-trades-S_msharpe.csv  strategy-trades-T-_kospi_core_regime.csv  strategy-trades-T_kospi_core_chandelier.csv  strategy-trades-U_chandelier_scaleout.csv  strategy-trades-V_ls.csv  strategy-trades-V_spo.csv  strategy-trades-W_allweather_chandelier.csv  strategy-trades.csv
scripts/: backtest_momentum.py  build_forward_record.py  build_report_performance.py  build_stats.py  capture_yasun_reference.py  check_active_contracts.mjs  check_schema_compat.py  collect_ewha.py  collect_kuvic_browser.py  collect_reports.py  collect_smic.py  collect_voera.py  export_optuna_artifacts.py  export_quant_search_artifacts.py  export_schemas.py  export_signals_api.py  export_stock_charts.py  export_web_artifacts.py  full_rebuild_web_artifacts.sh  ocr_fallback.py  perf_semantic_smoke.py  pipeline_health.py  prepare_vercel_prebuilt.mjs  prepare_vercel_prebuilt.sh  refresh_web_artifacts.sh  run_optuna_search.py  run_persona_sim.py  run_stock_rule_search.py  run_strategy_generation_pipeline.py  send_telegram_signals.py  spo_portfolio.py  transcribe_pdfs.py  vercel_build.mjs  vercel_build.sh
tests/: conftest.py  test_accounting.py  test_chandelier.py  test_change_detection.py  test_currency.py  test_download_pdfs.py  test_dsr_walkforward.py  test_external_artifacts.py  test_extract_pdf.py  test_extraction_quality.py  test_fetch_index.py  test_golden.py  test_leading_zero_preservation.py  test_markdown_export.py  test_opendataloader_markdown.py  test_rebalance_fx.py  test_report_rows.py  test_shortlist_governance.py  test_strategy_memory.py  test_symbol_registry.py  test_web_artifacts.py
(+3300 files in other folders)
