[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "snusmic-quant-terminal"
version = "0.1.0"
description = "Collect SNUSMIC research PDFs, extract target prices, and build quant simulation data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "pypdf",
  "yfinance",
  "pandas",
  "numpy",
  "scipy",
  "duckdb",
  "pydantic>=2.6",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
ocr = ["opendataloader-pdf[hybrid]"]

[project.scripts]
snusmic-sync = "snusmic_pipeline.cli:main"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff>=0.5",
  "mypy>=1.10",
  "hypothesis>=6.100",
  "pre-commit>=3.6",
  "types-requests",
  "pandas-stubs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
xfail_strict = true

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["data", ".omc"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "B011"]
"scripts/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["src/snusmic_pipeline/sim"]
ignore_missing_imports = true
warn_unused_ignores = false
# Baseline rules that pass on the persona-simulation module.
check_untyped_defs = true
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "duckdb.*"]
ignore_missing_imports = true

# Pandas-stubs / matplotlib stubs are installed but the sim mixes Series /
# DataFrame in ways the stubs narrow imprecisely, and the personas module
# relies on optional-keyed sort/dict comprehensions that the stricter sort
# protocol rejects. Allow these call-sites to keep Any-typed intermediates
# without forcing a typed-coercion refactor inside this scope.
[[tool.mypy.overrides]]
module = [
    "snusmic_pipeline.sim.warehouse",
    "snusmic_pipeline.sim.market",
    "snusmic_pipeline.sim.holdings",
    "snusmic_pipeline.sim.report_stats",
    "snusmic_pipeline.sim.runner",
    "snusmic_pipeline.sim.visualize",
]
disable_error_code = ["arg-type", "assignment", "return-value", "dict-item", "call-overload", "type-arg", "misc", "union-attr"]
