[project]
name = "verdict-archive-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "pykrx>=1.0.51",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "optuna>=4.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "playwright>=1.40",
    "pymupdf>=1.23",
    "pillow>=10.0",
    "opendataloader-pdf>=0.1",
    # Windows-only OCR dependency
    "winocr>=0.0.15; sys_platform == 'win32'",
]

[tool.uv]
dev-dependencies = []
